[feat] validation: fix height jumping

--- a/src/shared/passwordInput/passwordInput.css
+++ b/src/shared/passwordInput/passwordInput.css
@@ -1,3 +1,4 @@
 .password-input-error {
+	height: 1.25rem;
 	color: var(--color-error);
 }
